# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  frontend-changes.md  pyproject.toml  query_flow_diagram.md  run.sh
backend/: ai_generator.py  app.py  config.py  search_tools.py  vector_store.py
backend/tests/: __init__.py  conftest.py  debug_rag_system.py  run_all_tests.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_integration.py
backend/tests/chroma_db/: chroma.sqlite3
backend/tests/test_chroma_db/: chroma.sqlite3
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh
